changed AppConfig