@@ -1,6 +1,5 @@
 package com.Eonline.Education.Configuration;
 
-import com.Eonline.Education.Configuration.JwtTokenValidator;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
@@ -16,6 +15,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -25,17 +25,17 @@ public class AppConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors().and()  // Ensure CORS is applied before Security
-            .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            .and()
-            .authorizeHttpRequests(authorize -> authorize
-                .requestMatchers("/api/**").authenticated()
-                .anyRequest().permitAll())
-            .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
-            .csrf().disable()
-            .httpBasic()
-            .and()
-            .formLogin();
+                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Attach CORS config
+                .csrf(csrf -> csrf.disable()) // Disable CSRF for API
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers("/api/auth/**", "/api/public/**").permitAll() // Public endpoints
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN") // Restricted to Admins
+                        .requestMatchers("/api/user/**").hasAnyRole("USER", "ADMIN") // User routes
+                        .anyRequest().authenticated()
+                )
+                .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
+                .httpBasic(); // Remove formLogin() if JWT-based
 
         return http.build();
     }
@@ -43,22 +43,17 @@ public class AppConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        
-        cfg.setAllowedOrigins(Arrays.asList(
-            "http://localhost:5173",
-            "http://localhost:3000",
-                "http://localhost:8082",
-                "http://13.126.181.47:8082",
-            "http://13.126.181.47:5173",
-                "http://13.126.181.47:3000",
-            "https://e-education.in",
-            "https://api.e-education.in"
+
+        cfg.setAllowedOriginPatterns(List.of( // Allows subdomains dynamically
+                "http://localhost:*",
+                "http://13.126.181.47:*",
+                "https://*.e-education.in"
         ));
 
-        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         cfg.setAllowCredentials(true);
-        cfg.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        cfg.setExposedHeaders(Arrays.asList("Authorization"));
+        cfg.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        cfg.setExposedHeaders(List.of("*")); // Exposes all headers
         cfg.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -71,3 +66,80 @@ public class AppConfig {
         return new BCryptPasswordEncoder();
     }
 }
+
+
+
+//package com.Eonline.Education.Configuration;
+//
+//import com.Eonline.Education.Configuration.JwtTokenValidator;
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+//import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+//import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+//import org.springframework.security.config.http.SessionCreationPolicy;
+//import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+//import org.springframework.security.crypto.password.PasswordEncoder;
+//import org.springframework.security.web.SecurityFilterChain;
+//import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//import org.springframework.web.cors.CorsConfigurationSource;
+//
+//import java.util.Arrays;
+//import java.util.List;
+//
+//@Configuration
+//@EnableWebSecurity
+//@EnableGlobalMethodSecurity(prePostEnabled = true)  // Enable method-level security
+//public class AppConfig {
+//
+//    @Bean
+//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//        http
+//            .cors().and()  // Ensure CORS is applied before Security
+//            .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+//            .and()
+//            .authorizeHttpRequests(authorize -> authorize
+//                .requestMatchers("/api/**").authenticated()
+//                .anyRequest().permitAll())
+//            .addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class)
+//            .csrf().disable()
+//            .httpBasic()
+//            .and()
+//            .formLogin();
+//
+//        return http.build();
+//    }
+//
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration cfg = new CorsConfiguration();
+//
+//        cfg.setAllowedOrigins(Arrays.asList(
+//            "http://localhost:5173",
+//            "http://localhost:3000",
+//                "http://localhost:8082",
+//                "http://13.126.181.47:8082",
+//            "http://13.126.181.47:5173",
+//                "http://13.126.181.47:3000",
+//            "https://e-education.in",
+//            "https://api.e-education.in"
+//        ));
+//
+//        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//        cfg.setAllowCredentials(true);
+//        cfg.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+//        cfg.setExposedHeaders(Arrays.asList("Authorization"));
+//        cfg.setMaxAge(3600L);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", cfg);
+//        return source;
+//    }
+//
+//    @Bean
+//    public PasswordEncoder passwordEncoder() {
+//        return new BCryptPasswordEncoder();
+//    }
+//}
